<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:backgroundTint="@color/background_color"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:backgroundTint="@color/background_color"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Logo -->
        <ImageView
            android:layout_width="136dp"
            android:layout_height="110dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/about_logo_description"
            android:src="@drawable/icono_head" />

        <!-- Nombre y Versión -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biz_udpmincho"
            android:text="@string/about_app_name"
            android:textColor="@color/text_color"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version_app_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:alpha="0.7"
            android:fontFamily="serif"
            android:text="@string/about_version"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/biz_udpmincho"
            android:text="@string/about_programming_title"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/about_programmers_names"
            android:textColor="@color/text_color" />

        <!-- Apartado para Iconografía/Diseño -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/biz_udpmincho"
            android:text="@string/about_icon_design_title"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/about_icon_designer_name"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/biz_udpmincho"
            android:text="@string/about_collaborator_title"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/about_collaborator_name"
            android:textColor="@color/text_color" />

    </LinearLayout>
</ScrollView>
